--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,17 +5,17 @@
 {% block body %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center mb-3">
             <h1>" {{ artCard.title }} "</h1>
             <h2 class="fst-italic fs-4">{{ artCard.user.nickname }}</h2>
         </div>
         <div class="col-12 col-lg-6 d-flex justify-content-center mb-5">
             <div class="art-homepage">
-                <img class="picture-homepage mb-3" src="{{ artCard.pictureArt }}">
+                <img class="picture-homepage img-fluid mb-3" src="{{ artCard.pictureArt }}">
                 <p class="description-homepage">{{ artCard.description }}</p>
             </div>
         </div>
-        <div class="col-12 col-md-6 m-auto mb-5">
+        <div class="col-12 col-lg-6 text-center mb-5">
             <img class="picture-homepage" src="{{ asset('build/images/placeholder/map.png') }}">
         </div>
         <div class="col-12 mt-lg-5">
