--- a/templates/artCard/pending.html.twig
+++ b/templates/artCard/pending.html.twig
@@ -13,7 +13,7 @@
                     <div class="mt-1 card-body">
                         <h1 class="card-title m-0 text-center">{{ artCard.title }}</h1>
                         <div class="d-flex justify-content-around">
-                                <a href="{{ path('artCard_show', {'id': artCard.id}) }}"
+                                <a href="{{ path('artCard_pending_show', {'id': artCard.id}) }}"
                                    class="btn btn-success text-white">Voir Plus</a>
                         </div>
                     </div>
