--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -22,7 +22,7 @@
                         {% if is_granted('ROLE_ADMIN') %}
                             <h4 class="text-center">Gestion admin</h4>
                             <li class="nav-item text-center pt-2">
-                                <a class="nav-link" href="{{ path('artCard_pending') }}">Nouveaux pings</a>
+                                <a class="nav-link" href="{{ path('artCard_pending') }}">Nouveaux markers</a>
                             </li>
                             <li class="nav-item text-center">
                                 <a class="nav-link" href="{{ path('user_index') }}">Gestion utilisateurs</a>
@@ -37,12 +37,12 @@
                                 <a class="nav-link" aria-current="page" href="{{ path('user_show') }}">Mon profil</a>
                             </li>
                             <li class="nav-item text-center border-bottom pb-3">
-                                <a class="nav-link" href="#">Mes pings</a>
+                                <a class="nav-link" href="#">Mes markers</a>
                             </li>
                         {% endif %}
                     {% endif %}
                     <li class="nav-item text-center pt-3">
-                        <a class="nav-link" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link" aria-current="page" href="{{ path('home_index') }}">Accueil</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="{{ path('artist_showAll') }}">Artistes</a>
