--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -36,16 +36,22 @@
                             <li class="nav-item text-center pt-3">
                                 <a class="nav-link" aria-current="page" href="{{ path('user_show') }}">Mon profil</a>
                             </li>
+                            <li class="nav-item text-center">
+                                <a class="nav-link" aria-current="page" href="{{ path('artCard_new') }}">Poster une oeuvre</a>
+                            </li>
                             <li class="nav-item text-center border-bottom pb-3">
                                 <a class="nav-link" href="#">Mes pings</a>
                             </li>
                         {% endif %}
                     {% endif %}
                     <li class="nav-item text-center pt-3">
-                        <a class="nav-link" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link" aria-current="page" href="{{ path('home_index') }}">Accueil</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="{{ path('artist_showAll') }}">Artistes</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="{{ path('artCard_index') }}">Oeuvres</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="#">Carte</a>
