--- a/templates/artCard/_form.html.twig
+++ b/templates/artCard/_form.html.twig
@@ -18,6 +18,15 @@
                         <div class="form-outline form-white mb-4">
                             {{ form_row(form.city) }}
                         </div>
+                        <div>
+                            {{ form_row(form.latitude) }}
+                        </div>
+                        <div>
+                            {{ form_row(form.longitude) }}
+                        </div>
+                        <div>
+                            {{ include('components/_map.html.twig') }}
+                        </div>
                         {{ form_row(form._token) }}
                         <button type="submit" class="btn btn-outline-light btn-lg px-5"
                                 value="Valider">
